line width should account for devicePixelRatio

--- a/bench/uPlot.html
+++ b/bench/uPlot.html
@@ -85,18 +85,21 @@
 								scale: "%",
 								value: v => v == null ? "-" : v.toFixed(1) + "%",
 								color: "red",
+								width: 1/devicePixelRatio,
 							},
 							{
 								label: "RAM",
 								scale: "%",
 								value: v => v == null ? "-" : v.toFixed(1) + "%",
 								color: "blue",
+								width: 1/devicePixelRatio,
 							},
 							{
 								label: "TCP Out",
 								scale: "mb",
 								value: v => v == null ? "-" : v.toFixed(2) + " MB",
 								color: "green",
+								width: 1/devicePixelRatio,
 							}
 						],
 					},
